--- a/public/assets/css/profile.css
+++ b/public/assets/css/profile.css
@@ -77,6 +77,16 @@
   opacity: 0.7;
 }
 
+.change-password-form-2 .form-group {
+  position: relative;
+}
+.change-password-form-2 .form-group i {
+  position: absolute;
+  right: 1rem;
+  top: 2.6rem;
+  cursor: pointer;
+}
+
 .set-profile-picture .media {
   align-items: center;
 }
