--- a/public/assets/css/common.css
+++ b/public/assets/css/common.css
@@ -121,16 +121,16 @@
   align-items: flex-start;
 }
 .file-prev img {
-  width: 12rem;
-  height: 12rem;
+  width: 6rem;
+  height: 6rem;
   -o-object-fit: cover;
      object-fit: cover;
   border-radius: 0.4rem;
   margin-bottom: 1rem;
 }
 .file-prev button {
-  width: 2.5rem;
-  height: 2.5rem;
+  width: 1.7rem;
+  height: 1.7rem;
   border-radius: 0.4rem;
   background: linear-gradient(98.03deg, #FF6262 18.68%, #F37F14 88.52%);
   color: #ffffff;
@@ -138,7 +138,25 @@
   align-items: center;
   justify-content: center;
   display: inline-flex;
-  font-size: 1.2rem;
+  font-size: 0.9rem;
   margin-left: 1rem;
   display: none;
+}
+
+.file-prev-show {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+}
+.file-prev-show label {
+  margin-bottom: 0 !important;
+}
+.file-prev-show img {
+  width: 4rem;
+  height: 4rem;
+  border-radius: 50%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  border: 4px solid #FF6262;
+  margin-left: 1rem;
 }
