--- a/public/assets/css/common.css
+++ b/public/assets/css/common.css
@@ -160,3 +160,30 @@
   border: 4px solid #FF6262;
   margin-left: 1rem;
 }
+
+#course_table {
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
+}
+#course_table tr th {
+  border: 1px solid #DEE3EB;
+}
+
+.dataTables_paginate {
+  margin-top: 1.5rem;
+}
+.dataTables_paginate .paginate_button {
+  color: #000000;
+}
+.dataTables_paginate .paginate_button.current {
+  background-color: #FF6262 !important;
+  border: #FF6262 !important;
+}
+
+#course_table tr:nth-child(odd) td {
+  background-color: #dfe5f1 !important;
+}
+
+#course_table tr:nth-child(even) td {
+  background-color: #ffffff !important;
+}
