--- a/scss/common.scss
+++ b/scss/common.scss
@@ -173,7 +173,7 @@
     }
 }
 
-#course_table{
+#courseTable{
     padding-top: 1.5rem;
     padding-bottom: 1.5rem;
     tr {
@@ -196,11 +196,17 @@
 
 #courseTable tr:nth-child(odd) td{
     background-color: #dfe5f1!important;
+    vertical-align: middle;
 }
 #courseTable tr:nth-child(even) td{
     background-color: v.$light!important;
+    vertical-align: middle;
 }
 
+#courseTable tr td:nth-child(5),
+#courseTable tr td:nth-child(4),
+#courseTable tr td:nth-child(3),
 #courseTable tr td:nth-child(2){
     text-align: center;
+    vertical-align: middle;
 }
