--- a/scss/common.scss
+++ b/scss/common.scss
@@ -173,7 +173,7 @@
     }
 }
 
-#courseTable{
+#myDataTable{
     padding-top: 1.5rem;
     padding-bottom: 1.5rem;
     tr {
@@ -194,19 +194,27 @@
     }
 }
 
-#courseTable tr:nth-child(odd) td{
+#myDataTable tr:nth-child(odd) td{
     background-color: #dfe5f1!important;
     vertical-align: middle;
 }
-#courseTable tr:nth-child(even) td{
+#myDataTable tr:nth-child(even) td{
     background-color: v.$light!important;
     vertical-align: middle;
 }
 
-#courseTable tr td:nth-child(5),
-#courseTable tr td:nth-child(4),
-#courseTable tr td:nth-child(3),
-#courseTable tr td:nth-child(2){
+#myDataTable tr td:nth-child(5),
+#myDataTable tr td:nth-child(4),
+#myDataTable tr td:nth-child(3),
+#myDataTable tr td:nth-child(2){
     text-align: center;
     vertical-align: middle;
+}
+
+.dataTables_wrapper .dataTables_paginate .paginate_button.current, .dataTables_wrapper .dataTables_paginate .paginate_button.current:hover{
+    color: v.$light!important;
+}
+
+#myDataTable tr td:last-child{
+    text-align: right;
 }
