--- a/public/assets/css/student.css
+++ b/public/assets/css/student.css
@@ -124,3 +124,37 @@
   opacity: 0.7;
   color: #ffffff;
 }
+
+.course-txt-box-2 {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.course-txt-box-2 h6 {
+  font-size: 1.2rem;
+  font-weight: 500;
+  color: #2C2C2C;
+  line-height: 140%;
+}
+
+.no-result-found {
+  margin-top: 2rem;
+  text-align: center;
+}
+.no-result-found h6 {
+  font-size: 1.6rem;
+  font-weight: 500;
+  color: #FF6262;
+  line-height: 140%;
+}
+
+.review-box-icon {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+}
+.review-box-icon li i {
+  font-size: 1rem;
+  margin-left: 0.2rem;
+  color: #FF6262;
+}
