--- a/scss/student.scss
+++ b/scss/student.scss
@@ -105,3 +105,28 @@
         color: v.$light;
     }
 }
+
+.course-txt-box-2{
+    @include m.df(space-between);
+    h6{
+        @include m.para(1.2rem,500,v.$btnbg)
+    }
+}
+
+.no-result-found{
+    margin-top: 2rem;
+    text-align: center;
+    h6{
+        @include m.para(1.6rem,500,v.$primary);
+    }
+}
+.review-box-icon{
+    @include m.df;
+    li{
+        i{
+            font-size: 1rem;
+            margin-left: 0.2rem;
+            color: v.$primary;
+        }
+    }
+}
