--- a/public/assets/css/common.css
+++ b/public/assets/css/common.css
@@ -230,3 +230,25 @@
   line-height: 140%;
   padding: 1rem 0;
 }
+
+.select2-container--default .select2-selection--multiple .select2-selection__choice {
+  background: linear-gradient(98.03deg, #FF6262 18.68%, #F37F14 88.52%) !important;
+  color: #ffffff !important;
+  border: 0 !important;
+  font-size: 14px !important;
+}
+
+.select2-container--default .select2-selection--multiple .select2-selection__choice__remove {
+  color: #ffffff !important;
+}
+
+.select2-container--default .select2-results__option--highlighted[aria-selected] {
+  background: linear-gradient(98.03deg, #FF6262 18.68%, #F37F14 88.52%) !important;
+}
+
+.arrw-down {
+  position: absolute;
+  right: 1rem;
+  top: 44px;
+  color: #8C8FAE;
+}
