--- a/scss/student.scss
+++ b/scss/student.scss
@@ -130,3 +130,98 @@
         }
     }
 }
+.review-box{
+    display: block!important;
+    h4{
+        img{
+            border-radius: 50%;
+            width: 2.5rem;
+            height: 2.5rem;
+        }
+    }
+}
+
+.review-box{
+    margin-bottom: 1rem;
+    .d_flex{
+        @include m.df(space-between);
+        margin-bottom: .5rem;
+        h4{
+            @include m.para(1rem,600,v.$btnbg);
+        }
+    }
+    p{
+        @include m.para(0.9rem,400,v.$fourth);
+    }
+}
+.write-review-box{
+    .form-group{
+        label{
+            @include m.para(0.9rem,400,v.$btnbg);
+            margin-bottom: 0.5rem;
+            display: block;
+        }
+    }
+    .form-rev{
+        margin-top: 0.5rem;
+        @include m.df(space-between);
+        .btn-submit{
+            @include m.button(0.9rem,v.$light,v.$gdbg);
+        }
+    }
+
+    
+#full-stars {
+
+    .rating-group {
+      display: inline-flex;
+    }
+     
+    .rating__icon {
+      pointer-events: none;
+    }
+     
+    .rating__input {
+     position: absolute !important;
+     left: -9999px !important;
+    }
+   
+    .rating__label {
+      cursor: pointer;
+      padding: 0 0.1em;
+      font-size: 2rem;
+    }
+     
+    .rating__icon--star {
+      color: v.$primary;;
+    }
+     
+    .rating__icon--none {
+      color: #eee;
+    }
+   
+    .rating__input--none:checked + .rating__label .rating__icon--none {
+      color: v.$primary;;
+    }
+   
+    .rating__input:checked ~ .rating__label .rating__icon--star {
+      color: #ddd;
+    }
+   
+    .rating-group:hover .rating__label .rating__icon--star {
+      color: v.$primary;
+    } 
+    .rating__input:hover ~ .rating__label .rating__icon--star {
+      color: #ddd;
+    }
+     
+    .rating-group:hover .rating__input--none:not(:hover) + .rating__label .rating__icon--none {
+       color: #eee;
+    }
+   
+    .rating__input--none:hover + .rating__label .rating__icon--none {
+      color: v.$primary;;
+    }
+  }
+}
+
