--- a/public/assets/css/profile.css
+++ b/public/assets/css/profile.css
@@ -409,6 +409,116 @@
   margin-top: 0.6rem;
 }
 
+.main-chat-wrapper {
+  margin-top: 1rem;
+  padding: 1rem 1.5rem;
+  border-radius: 7px;
+  background-color: #ffffff;
+}
+.main-chat-wrapper .d-flex {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 1rem;
+}
+.main-chat-wrapper .d-flex h5 {
+  font-size: 1.2rem;
+  font-weight: 600;
+  color: #2C2C2C;
+  line-height: 140%;
+}
+.main-chat-wrapper .d-flex .media {
+  align-items: center;
+}
+.main-chat-wrapper .d-flex .media img {
+  width: 2rem;
+  height: 2rem;
+  border-radius: 50%;
+  margin-right: 0.5rem;
+}
+.main-chat-wrapper .d-flex .media h5 {
+  font-size: 0.9rem;
+  font-weight: 700;
+  color: #2C2C2C;
+  line-height: 140%;
+}
+.main-chat-wrapper .d-flex .media p {
+  font-size: 0.8rem;
+  font-weight: 500;
+  color: #8C8FAE;
+  line-height: 140%;
+}
+
+.chat-box-wrap .message-list-wrap {
+  border: 1px solid #DEE3EB;
+  border-radius: 8px;
+  padding: 1.5rem;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  background-color: rgba(0, 0, 0, 0.01);
+}
+.chat-box-wrap .message-list-wrap .message-item {
+  display: inline-block;
+  padding: 0.4rem 1rem;
+  border-radius: 8px;
+  background: #DEE3EB;
+  font-size: 0.9rem;
+  font-weight: 500;
+  color: #2C2C2C;
+  line-height: 140%;
+  margin-bottom: 1rem;
+  max-width: 90%;
+}
+.chat-box-wrap .message-list-wrap .message-item span {
+  display: block;
+  text-align: right;
+  font-size: 0.65rem;
+  font-weight: 400;
+  color: #2C2C2C;
+  line-height: 140%;
+  margin-top: 0.4rem;
+}
+.chat-box-wrap .message-list-wrap .sender {
+  background: linear-gradient(98.03deg, #FF6262 18.68%, #F37F14 88.52%);
+  font-size: 0.9rem;
+  font-weight: 500;
+  color: #ffffff;
+  line-height: 140%;
+}
+.chat-box-wrap .message-list-wrap .sender span {
+  color: #ffffff;
+}
+.chat-box-wrap form {
+  margin-top: 1rem;
+}
+.chat-box-wrap form .form-group {
+  position: relative;
+}
+.chat-box-wrap form .form-group .form-control {
+  font-size: 1rem;
+  font-weight: 500;
+  color: #2C2C2C;
+  line-height: 140%;
+  resize: none;
+}
+.chat-box-wrap form .form-submit {
+  margin-top: 1rem;
+  text-align: right;
+}
+.chat-box-wrap form .form-submit .btn-submit {
+  font-size: 1rem;
+  font-weight: 500;
+  color: #ffffff;
+  line-height: 140%;
+  background: linear-gradient(98.03deg, #FF6262 18.68%, #F37F14 88.52%);
+  display: inline-block;
+  padding: 0.85rem 1.5rem;
+}
+.chat-box-wrap form .form-submit .btn-submit:hover {
+  opacity: 0.7;
+}
+
 @media (min-width: 320px) and (max-width: 574px) {
   .user-password-chnage .password-change-txt h1 {
     font-size: 1.4rem;
