--- a/scss/common.scss
+++ b/scss/common.scss
@@ -263,3 +263,23 @@
     top: 44px;
     color: v.$fourth;
 }
+
+.message-box{
+    h5{
+        font-size: 1rem;
+    }
+    .d_flex{
+        @include m.df(space-between);
+        img{
+            width: 2rem;
+            height: 2rem;
+            border-radius: 50%;
+        }
+    }
+    a.chat-bttn{
+        @include m.button(.9rem,v.$light,v.$fourth);
+        padding: .4rem .6rem;
+        border-radius: 3px;
+        margin-top: 0.4rem;
+    }
+}
