--- a/public/assets/css/student.css
+++ b/public/assets/css/student.css
@@ -252,3 +252,24 @@
 .write-review-box #full-stars .rating__input--none:hover + .rating__label .rating__icon--none {
   color: #FF6262;
 }
+
+.profile-box span {
+  width: 3rem;
+  height: 3rem;
+  background: linear-gradient(98.03deg, #FF6262 18.68%, #F37F14 88.52%);
+  border-radius: 50%;
+  margin-right: 1rem;
+  color: #ffffff;
+  font-size: 1.6rem;
+  font-weight: 600;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+}
+.profile-box img {
+  width: 3rem;
+  height: 3rem;
+  border-radius: 50%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
