--- a/scss/student.scss
+++ b/scss/student.scss
@@ -225,3 +225,25 @@
   }
 }
 
+
+.profile-box{
+    span{
+        width: 3rem;
+        height: 3rem;
+        background: v.$gdbg;
+        border-radius: 50%;
+        margin-right: 1rem;
+        color: v.$light;
+        font-size: 1.6rem;
+        font-weight: 600;
+        display: inline-flex;
+        align-items: center;
+        justify-content: center;
+    }
+    img{
+        width: 3rem;
+        height: 3rem;
+        border-radius: 50%;
+        object-fit: cover;
+    }
+}
