--- a/scss/course.scss
+++ b/scss/course.scss
@@ -488,6 +488,10 @@
         width: 100%;
     }
 }
+
+.course-box-wrap{
+    overflow-x: hidden!important;
+}
 // suggested css @E
 
 // mobile responsive device css
@@ -593,6 +597,9 @@
     }
     .learning-content-box-2 .muted-content-box p{
         width: 100%;
+    } 
+    .course-box-wrap{
+        overflow-x: hidden!important;
     }
 }
 
